// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Footer component test should render without crash with props 1`] = `
<footer
  className="footer footerCLass"
/>
`;

exports[`Footer component test should render without crash without props 1`] = `
<footer
  className="footer "
/>
`;
